# dorfbusd

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docker/: enabled_plugins  rabbitmq.Dockerfile
dorfbuscli/: Cargo.toml  README.md
dorfbuscli/src/: cli.rs  main.rs
dorfbusd/: Cargo.toml  README.md  example-config.toml
dorfbusd/src/: api.rs  bus_state.rs  cli.rs  config.rs  main.rs  motd.txt  openapi.yml  state.rs  swagger_ui.rs  tests.rs
dorfbusd/src/resources/: swagger-ui.css  swagger-ui.html
dorfbusext/: Cargo.toml  README.md
dorfbusext/src/: lib.rs
src/: api.rs  cli.rs  config.rs  main.rs  openapi.yml  state.rs  swagger_ui.rs
src/resources/: 404.html  swagger-ui.html
