[package]
name = "dorfbusd"
version = "0.1.0"
edition = "2021"
authors = ["rappet <rappet@rappet.de>"]
license = "MIT"
rust-version = "1.56.1"
repository = "https://github.com/rappet/dorfbusd"
keywords = ["dorfbus", "chaosdorf", "modbus", "rest", "mqtt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-web = "3"
anyhow = "1"
clap = "2"
http = "0.2.5"
openapiv3 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = "1"
tokio-serial = "5"
tokio-modbus = { version = "0.5.1", default-features = false, features = [
    "rtu",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
