[package]
name = "dorfbusd"
version = "0.1.0"
edition = "2021"
authors = ["rappet <rappet@rappet.de>"]
license = "MIT"
rust-version = "1.56.1"
repository = "https://github.com/rappet/dorfbusd"
keywords = ["dorfbus", "chaosdorf", "modbus", "rest", "mqtt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.4"
clap = "2"
dorfbusext = { path = "../dorfbusext" }
http = "0.2.5"
hyper = "0.14"
mime = "0.3"
openapiv3 = "0.5"
parking_lot = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }
tokio-serial = "5"
tokio-modbus = { version = "0.5.1", default-features = false, features = [
  "rtu",
] }
toml = "0.5.8"
tower = "0.4"
tower-http = { version = "0.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = 'fat'
